--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ requires-python = ">=3.11"
 dependencies = [
     "django (>=5.0,<6.0)",
     "psycopg2-binary (>=2.9.11,<3.0.0)",
-    "python-dotenv (>=1.2.1,<2.0.0)"
+    "python-dotenv (>=1.2.1,<2.0.0)",
+    "pillow (>=12.1.0,<13.0.0)"
 ]
 
 
