--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,17 @@ dependencies = [
     "django (>=5.0,<6.0)",
     "psycopg2-binary (>=2.9.11,<3.0.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
-    "pillow (>=12.1.0,<13.0.0)"
+    "pillow (>=12.1.0,<13.0.0)",
+    "django-extensions (>=4.1,<5.0)",
+    "pytz (>=2025.2,<2026.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+dev = [
+    "ruff (>=0.14.11,<0.15.0)"
+]
