--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "python-dotenv (>=1.2.1,<2.0.0)",
     "pillow (>=12.1.0,<13.0.0)",
     "django-extensions (>=4.1,<5.0)",
-    "pytz (>=2025.2,<2026.0)"
+    "pytz (>=2025.2,<2026.0)",
+    "flake8 (>=7.3.0,<8.0.0)",
+    "ruff (>=0.14.13,<0.15.0)"
 ]
 
 
