--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ dependencies = [
     "django-extensions (>=4.1,<5.0)",
     "pytz (>=2025.2,<2026.0)",
     "flake8 (>=7.3.0,<8.0.0)",
-    "ruff (>=0.14.13,<0.15.0)"
+    "ruff (>=0.14.13,<0.15.0)",
+    "celery (>=5.6.2,<6.0.0)",
+    "redis (>=7.1.0,<8.0.0)"
 ]
 
 
